wedding/main/static/css/style.css
* { text-rendering: optimizeLegibility; }

body {
    margin: 0;
    padding: 0;
    background-color: #fff;
    width: 100%;
    background-color: #35B4F0;
}

a { color: #f0B435; font-weight: bold; text-shadow: 1px 1px 1px rgba(0,0,0,0.5); }
a:hover { color: #b4f035; text-decoration: none; }

a.thumbnail small { font-size: 50%; color: #444; }

a, strong { font-family: "Candal", Arial, sans-serif; font-weight: normal; }

small { text-shadow: none; }

.container { width: 100%; }

.contents {
    width: 100%;
    height: 100%;
    margin: 50px auto;
    font-size: 200%;
    color: #fff;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.75);
    z-index: 1;
    position: relative;
}

.fg {
    background: transparent url('../i/mountains3.png') no-repeat scroll center 0px;
    width: 100%;
    height: 20%;
    z-index: 2;
    overflow: hidden;
    position: fixed;
    bottom: 0;
}

.lodgingmap {
    border: solid 1px #fff;
    width: 80%;
    height: 500px;
}

@media only screen and (max-device-width: 768px) {
    .fg {
        background-position: center -50px;
        width: 768px;
    }

    .contents { font-size: 150%; }

    .lodgingmap { width: 300px; height: 300px; }
}

h1 {
    font-family: "Dancing Script";
    font-size: 400%;
}

h2 {
    font-family: "Grand Hotel", cursive, serif;
    font-size: 200%;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.75);
}

h3 {
    font-size: 100%;
    font-family: "Candal", sans-serif;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.75);
    text-align: center;
}

section {
    width: 100%;
    left: 0;
    padding-top: 50px;
    margin-bottom: 1000px;
}

section p { font-size: 80%; padding: 0 10px; }
section ul { font-size: 70%; }
section ul li { margin-bottom: 0.5em; }

#intro {
    position: relative;
    font-size: 150%;
    font-family: "Grand Hotel", Arial, sans-serif;
    height: 1000px;
}

#intro p { padding: 0; }

#intro strong {
    text-transform: uppercase;
    font-family: "Candal", sans-serif;
    font-weight: normal;
}

#begin {
    margin-bottom: 400px;
}

.love {
    color: #900;
    text-shadow: 0 -1px 1px #f00;
    font-size: 120%;
}

.relative { position: relative; }

.smaller { font-size: 80%; }

input[type=checkbox] { width: 20px; height: 20px; display: inline-block; }

.navbar-collapse {
    max-height: 100%;
    text-align: center;
}

